--- a/public/account/index.html
+++ b/public/account/index.html
@@ -112,14 +112,21 @@
                 <p class="data-container__data data-container__data--birth"></p>
                 <button class="data-container__button" id="edit_dateOfBirth">Edytuj</button>
             </div>
+            <div class="main__edit-popup edit-popup">
+                <h3 class="edit-popup__title">Zmień swoje dane</h3>
+                <p class="edit-popup__name"></p>
+                <input type="text" class="edit-popup__data">
+                <button class="edit-popup__button">Zmień</button>
+            </div>
         </div>
-    </div>
-
-    <div class="acount__edit-popup edit-popup">
-        <h3 class="edit-popup__title">Zmień swoje dane</h3>
-        <p class="edit-popup__name"></p>
-        <input type="text" class="edit-popup__data">
-        <button class="edit-popup__button">Zmień</button>
+        <div class="main__footer footer">
+            <div class="footer__name-box">
+                <p class="footer__name">Mini Kasyno</p>
+            </div>
+            <div class="footer__copyright-box">
+                <p class="footer__copyright">© 2020 ChoryCzłowiek All Rights Reserved.</p>
+            </div>
+        </div>
     </div>
     <script src="script.js"></script>
     <script src="../js/nav.js"></script>
